tweaks for linux

--- a/src/main/resources/public/qmap.html
+++ b/src/main/resources/public/qmap.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-	<form action="/qmap" method="POST">
+	<form action="/qmap" method="POST" class="col-sm-6">
 
 		<div class="form-group">
 			<label for="name">Name</label>
