--- a/src/main/resources/public/upload.html
+++ b/src/main/resources/public/upload.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-	<form action="/upload" method="POST" enctype="multipart/form-data">
+	<form action="/upload" method="POST" enctype="multipart/form-data" class="col-sm-6">
 
 		<div class="form-group">
 			<label for="uploadFile">Your Life Story</label>
