--- a/src/main/resources/public/person.html
+++ b/src/main/resources/public/person.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>Query Map Example</title>
+	<title>Mongo - Create Person Example</title>
 	<link href="/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
 	<link href="/assets/main.css" rel="stylesheet"/>
 </head>
